@@ -9,12 +9,14 @@
 ## Use automake to process this into a Makefile.in
 
 EXTRA_DIST = adv_packet.cpp adv_packet.h\
+             adv_reader.cpp adv_reader.h\
              adv_server.cpp adv_server.h\
              adv_source.cpp adv_source.h\
              adv_tag.cpp adv_tag.h\
              astring.cpp astring.h\
              cmdswitch.cpp cmdswitch.h\
              config.h\
+             link_common.sh\
              lwrp_clientconnection.cpp lwrp_clientconnection.h\
              lwrp_server.cpp lwrp_server.h\
              profile.cpp profile.h\
