@@ -9,6 +9,7 @@
 #ifndef ROUTING_H
 #define ROUTING_H
 
+#include <math.h>
 #include <stdint.h>
 #include <sys/ipc.h>
 #include <sys/shm.h>
@@ -41,12 +42,14 @@ class Routing
   void setSrcName(int slot,const QString &str);
   bool srcEnabled(int slot) const;
   void setSrcEnabled(int slot,bool state);
+  int srcMeterLevel(int slot,int chan) const;
   int activeSources() const;
   QHostAddress dstAddress(int slot) const;
   void setDstAddress(int slot,const QHostAddress &addr);
   void setDstAddress(int slot,const QString &addr);
   QString dstName(int slot) const;
   void setDstName(int slot,const QString &str);
+  int dstMeterLevel(int slot,int chan) const;
   unsigned nicQuantity() const;
   QHostAddress nicAddress(unsigned n);
   QHostAddress nicNetmask(unsigned n);
@@ -62,7 +65,9 @@ class Routing
   uint32_t dst_slots;
   uint32_t src_addr[SWITCHYARD_MAX_SLOTS];
   bool src_enabled[SWITCHYARD_MAX_SLOTS];
+  float src_meter[SWITCHYARD_MAX_SLOTS][SWITCHYARD_MAX_CHANNELS];
   uint32_t dst_addr[SWITCHYARD_MAX_SLOTS];
+  float dst_meter[SWITCHYARD_MAX_SLOTS][SWITCHYARD_MAX_CHANNELS];
   static QString dumpAddress(uint32_t addr);
 
  private:
