@@ -1,15 +1,0 @@
-## automake.am
-##
-## (C) Copyright 2014 Fred Gleason <fredg@paravelsystems.com>
-##
-##   All Rights Reserved.
-##
-## Use automake to process this into a Makefile.in
-
-
-EXTRA_DIST = link_common.sh
-
-CLEANFILES = *~
-DISTCLEANFILES = 
-MAINTAINERCLEANFILES = *~\
-                       Makefile.in
